Change in retrieving reports response body and better backend readme
